--- a/b/package.json
+++ b/b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.20.0",
-    "meteor-node-stubs": "~0.2.4"
+    "meteor-node-stubs": "~0.2.4",
+    "mongo-object": "0.0.1"
   }
 }
